# configd

./: .gitignore  Cargo.toml  README.md
configd/: .gitignore  Cargo.toml
configd/src/: config.rs  container.rs  handlers.rs  main.rs
configd/src/application/: change_config_password.rs  clean_config_accesses.rs  create_config.rs  create_schema.rs  delete_config.rs  delete_config_password.rs  delete_schema.rs  get_config.rs  get_schema.rs  list_schemas.rs  mod.rs  revalidate_configs.rs  update_config.rs  update_schema.rs  validate_config.rs
configd/src/domain/: access.rs  config.rs  errors.rs  events.rs  hasher.rs  id.rs  interval.rs  json_prop.rs  mod.rs  page.rs  password.rs  prop.rs  schema.rs  value.rs
configd/src/domain/configs/: access.rs  config.rs  mod.rs  password.rs
configd/src/domain/events/: event.rs  event_collector.rs  mod.rs
configd/src/domain/schemas/: events.rs  mod.rs  schema.rs
configd/src/domain/shared/: id.rs  mod.rs  page.rs  timestamps.rs  version.rs
configd/src/domain/values/: interval.rs  json_prop.rs  mod.rs  prop.rs
configd/src/infrastructure/: inmem_schema_repository.rs  local_event_bus.rs  mod.rs  postgres_schema_repository.rs  sha256_hasher.rs  sqlite_models.rs  sqlite_schema_repository.rs  sqlx_models.rs
go-lib/: client.go  config.go  go.mod  lib.go
go-lib/examples/: get_config.go
src/: config.rs  container.rs  handlers.rs  main.rs
src/application/: create_config.rs  create_schema.rs  delete_config.rs  delete_schema.rs  dtos.rs  get_config.rs  get_schema.rs  mod.rs  (+4 more)
web/: .eslintrc.js  package-lock.json  package.json
(+62 files in other folders)
