[package]
name = "configd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.5"
axum-macros = "0.2"
core-lib = "0.1"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slug = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
