[package]
name = "configd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.5"
axum-macros = "0.2"
chrono = { version = "0.4", features = ["serde"] }
core-lib = "0.1"
hex = "0.4"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
slug = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "json"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
